firefactor: kod bakimi yapildi